改进目录结构 利于打包 使组件库支持 全部引入  和 按需引入

--- a/components/css/reset.scss
+++ b/components/css/reset.scss
@@ -1,6 +1,8 @@
+
 /* ********************重置样式 reset******************** */
  
 /* *********PC端********** */
+@import './global.scss';
 body, dl, dd, h1, h2, h3, h4, h5, h6, p, form, figure, figcaption {
     margin:0px;
 }
