--- a/components/theme-default/global.scss
+++ b/components/theme-default/global.scss
@@ -1,4 +1,10 @@
 @charset "utf-8";
+
+/**
+  *@file 整体变量
+*/
+
+@import './reset.scss';
 // 变量存储
 // 字体Unicode编码 微软雅黑:\5FAE\8F6F\96C5\9ED1 , 宋体:\5B8B\4F53
 $pcFont: '\5FAE\8F6F\96C5\9ED1', '\5B8B\4F53', arial;
