--- a/components/theme-default/index.scss
+++ b/components/theme-default/index.scss
@@ -1,6 +1,6 @@
 /* font start */
 
-// @import '//at.alicdn.com/t/font_3146155_x0brpn2b92n.css';  //dev
+@import '//at.alicdn.com/t/font_3146155_nypqfq8lqn.css';  //dev
 
 // @import './fonts/iconfont.css'; //test or production
 
