--- a/components/theme-default/fonts/demo_index.html
+++ b/components/theme-default/fonts/demo_index.html
@@ -55,6 +55,48 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfont">&#xe64e;</span>
+                <div class="name">分享</div>
+                <div class="code-name">&amp;#xe64e;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe633;</span>
+                <div class="name">email</div>
+                <div class="code-name">&amp;#xe633;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe7d9;</span>
+                <div class="name">cloud-upload</div>
+                <div class="code-name">&amp;#xe7d9;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe7a5;</span>
+                <div class="name">edit</div>
+                <div class="code-name">&amp;#xe7a5;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe607;</span>
+                <div class="name">download</div>
+                <div class="code-name">&amp;#xe607;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe600;</span>
+                <div class="name">setting</div>
+                <div class="code-name">&amp;#xe600;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe8fd;</span>
+                <div class="name">loading</div>
+                <div class="code-name">&amp;#xe8fd;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe638;</span>
                 <div class="name">down</div>
                 <div class="code-name">&amp;#xe638;</div>
@@ -84,9 +126,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfont';
-  src: url('iconfont.woff2?t=1642838607905') format('woff2'),
-       url('iconfont.woff?t=1642838607905') format('woff'),
-       url('iconfont.ttf?t=1642838607905') format('truetype');
+  src: url('iconfont.woff2?t=1643264507760') format('woff2'),
+       url('iconfont.woff?t=1643264507760') format('woff'),
+       url('iconfont.ttf?t=1643264507760') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -111,6 +153,69 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfont icon-fenxiang"></span>
+            <div class="name">
+              分享
+            </div>
+            <div class="code-name">.icon-fenxiang
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-email"></span>
+            <div class="name">
+              email
+            </div>
+            <div class="code-name">.icon-email
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-cloud-upload"></span>
+            <div class="name">
+              cloud-upload
+            </div>
+            <div class="code-name">.icon-cloud-upload
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-edit"></span>
+            <div class="name">
+              edit
+            </div>
+            <div class="code-name">.icon-edit
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-download"></span>
+            <div class="name">
+              download
+            </div>
+            <div class="code-name">.icon-download
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-setting"></span>
+            <div class="name">
+              setting
+            </div>
+            <div class="code-name">.icon-setting
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-loading"></span>
+            <div class="name">
+              loading
+            </div>
+            <div class="code-name">.icon-loading
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfont icon-down"></span>
@@ -156,6 +261,62 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-fenxiang"></use>
+                </svg>
+                <div class="name">分享</div>
+                <div class="code-name">#icon-fenxiang</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-email"></use>
+                </svg>
+                <div class="name">email</div>
+                <div class="code-name">#icon-email</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-cloud-upload"></use>
+                </svg>
+                <div class="name">cloud-upload</div>
+                <div class="code-name">#icon-cloud-upload</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-edit"></use>
+                </svg>
+                <div class="name">edit</div>
+                <div class="code-name">#icon-edit</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-download"></use>
+                </svg>
+                <div class="name">download</div>
+                <div class="code-name">#icon-download</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-setting"></use>
+                </svg>
+                <div class="name">setting</div>
+                <div class="code-name">#icon-setting</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-loading"></use>
+                </svg>
+                <div class="name">loading</div>
+                <div class="code-name">#icon-loading</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
