--- a/components/theme-default/index.scss
+++ b/components/theme-default/index.scss
@@ -1,8 +1,8 @@
 /* font start */
 
-@import '//at.alicdn.com/t/font_3146155_nypqfq8lqn.css';  //dev
+// @import '//at.alicdn.com/t/font_3146155_nypqfq8lqn.css';  //dev
 
-// @import './fonts/iconfont.css'; //test or production
+@import './fonts/iconfont.css'; //test or production and doc
 
 
 /* font end */
