--- a/components/theme-default/reset.scss
+++ b/components/theme-default/reset.scss
@@ -8,6 +8,7 @@ body {
   min-height: 100%;
   background: #fff;
   font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 body, dl, dd, h1, h2, h3, h4, h5, h6, p, form {
     margin:0px;
