--- a/components/theme-default/global.scss
+++ b/components/theme-default/global.scss
@@ -1,4 +1,3 @@
-@charset "utf-8";
 
 /**
   *@file 整体变量
@@ -78,6 +77,7 @@ $selectedBorderColor: #1890ff;
 $inlineRadius: 5px;
 $mainBackgroundColor: #fff;
 $selectedBackgroundColor: #ccc;
+$otherBorderColor:  #dcdfe6;
 %full{
     width: 100%;
     height: 100%;
