Adding navigation bar components, not all completed yet, still needs to be optimized, the document has not been written yet

--- a/components/theme-default/fonts/demo_index.html
+++ b/components/theme-default/fonts/demo_index.html
@@ -55,6 +55,30 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfont">&#xe6bc;</span>
+                <div class="name">message</div>
+                <div class="code-name">&amp;#xe6bc;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xea94;</span>
+                <div class="name">User</div>
+                <div class="code-name">&amp;#xea94;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xea95;</span>
+                <div class="name">Camera</div>
+                <div class="code-name">&amp;#xea95;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe681;</span>
+                <div class="name">home</div>
+                <div class="code-name">&amp;#xe681;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe64e;</span>
                 <div class="name">分享</div>
                 <div class="code-name">&amp;#xe64e;</div>
@@ -126,9 +150,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfont';
-  src: url('iconfont.woff2?t=1643264507760') format('woff2'),
-       url('iconfont.woff?t=1643264507760') format('woff'),
-       url('iconfont.ttf?t=1643264507760') format('truetype');
+  src: url('iconfont.woff2?t=1646807209123') format('woff2'),
+       url('iconfont.woff?t=1646807209123') format('woff'),
+       url('iconfont.ttf?t=1646807209123') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -153,6 +177,42 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfont icon-message"></span>
+            <div class="name">
+              message
+            </div>
+            <div class="code-name">.icon-message
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-User"></span>
+            <div class="name">
+              User
+            </div>
+            <div class="code-name">.icon-User
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-Camera"></span>
+            <div class="name">
+              Camera
+            </div>
+            <div class="code-name">.icon-Camera
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-home"></span>
+            <div class="name">
+              home
+            </div>
+            <div class="code-name">.icon-home
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfont icon-fenxiang"></span>
@@ -261,6 +321,38 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-message"></use>
+                </svg>
+                <div class="name">message</div>
+                <div class="code-name">#icon-message</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-User"></use>
+                </svg>
+                <div class="name">User</div>
+                <div class="code-name">#icon-User</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-Camera"></use>
+                </svg>
+                <div class="name">Camera</div>
+                <div class="code-name">#icon-Camera</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-home"></use>
+                </svg>
+                <div class="name">home</div>
+                <div class="code-name">#icon-home</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
