--- a/components/theme-default/global.scss
+++ b/components/theme-default/global.scss
@@ -78,6 +78,8 @@ $inlineRadius: 5px;
 $mainBackgroundColor: #fff;
 $selectedBackgroundColor: #ccc;
 $otherBorderColor:  #dcdfe6;
+
+$cls: #222327;
 %full{
     width: 100%;
     height: 100%;
