--- a/components/theme-default/index.scss
+++ b/components/theme-default/index.scss
@@ -1,6 +1,6 @@
 /* font start */
 
-// @import '//at.alicdn.com/t/font_3146155_nypqfq8lqn.css';  //dev
+// @import '//at.alicdn.com/t/font_3146155_2mrkiv8d1g9.css';  //dev
 
 @import './fonts/iconfont.css'; //test or production and doc
 
@@ -10,3 +10,5 @@
 @import './ClButton.scss';
 @import './ClSelector.scss';
 @import './ClClock.scss';
+@import './ClNebula.scss';
+@import './ClNavigationBar.scss';
