添加词云组件文档

--- a/components/theme-default/ClWordCloud.scss
+++ b/components/theme-default/ClWordCloud.scss
@@ -2,21 +2,24 @@
 
 .cl-wordcloud {
     position: relative;
-    min-width: 680px;
-    min-height: 680px;
+    min-width: 200px;
+    min-height: 200px;
     font-size: 12px;
     overflow: hidden;
     user-select: none;
     color: #fafafa;
     font-weight: 700;
-    background-color: #666;
+    // background-color: rgba(37, 63, 63, 0.727);
+    border: 1px solid rgba(125, 255, 255, 0.75);
+    border-radius: 5px;
+    padding: 10px;
     // 3D 元素距视图的距离
     perspective: 800px;
 
     .mask {
         width: 100%;
         height: 100%;
-        background-color: #ff0094;
+        background-color: transparent;
         // background: url('bg_mask.jpg') no-repeat center;
         background-size: cover;
         filter: blur(5px);
@@ -24,7 +27,7 @@
         .bg-mask {
             width: 100%;
             height: 100%;
-            background: #000;
+            background: transparent;
             opacity: 0.25;
         }
     }
